examples/minimal/undefined/UB-CTM1-bad.output
Error: UB-CTM1
Description: Variable-length array with length that evaluates to non-positive value at execution.
Type: Undefined behavior.
See also: C11 sec. 6.7.6.2:5, J.2:1 item 75
  at main(UB-CTM1-bad.c:3)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
