examples/minimal/undefined/UB-CTM1-bad.c
int main(void){
	int x = 5;
	int a[-x];
}
